PDF cleanout, reference update

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -14,6 +14,8 @@ These are the specific recognition of signal sequences on cargo proteins, the ta
 
 %Section on translocon
 
+%NOPI rules
+
 The prevailing idea about membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane (Figure \ref{fig:sequential-insertion})\cite{Cymer2014}.
 
 \begin{figure}[!ht]
@@ -21,16 +23,17 @@ The prevailing idea about membrane insertion by the translocon is that the \gls{
 \includegraphics[width=1\textwidth]{multipass-folding/sequential-insertion}
         \captionof{figure}[A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.]{\textbf{A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.}
         The two key concepts are that, one at a time, the TMHs emerge from the ribosome into the translocon.
-        This triggers the lateral gate to open.
+        This appearence of hydrophobicity triggers the lateral gate to open.
         As the nascent TMH is exposed to the membrane, it begins to partition.
-        This implies that the TMHs ultimately have no meaningful interactions with one another until they the protein has been threaded into the membrane and the1 TMH bundle is formed.
+        The downstream protein from the TMH is then threaded through the translocon until the next TMH is recognised.
+        This implies that the TMHs ultimately have no meaningful interactions with one another until the protein has been threaded into the membrane and the multiple TMHs form a bundle.
 }
 \label{fig:sequential-insertion}
 \end{figure}
 
 \subsection{Co-operative insertion}
 Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic translocon simultaneously.
-It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s \cite{Sadish2005, Cross2009}.
+It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by crosslinking analysis \cite{Sadlish2005, Cross2009}.
 Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
 This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
 
