--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,67 @@
+@article{Cross2009,
+abstract = {The membrane integration of polytopic proteins is coordinated at the endoplasmic reticulum (ER) by the conserved Sec61 translocon, which facilitates the lateral release of transmembrane (TM) segments into the lipid phase during polypeptide translocation. Here we use a site-specific crosslinking strategy to study the membrane integration of a new model protein and show that the TM segments of the P2X2 receptor are retained at the Sec61 complex for the entire duration of the biosynthetic process. This extremely prolonged association implicates the Sec61 complex in the regulation of the membrane integration process, and we use both in vitro and in vivo analyses to study this effect further. TM-segment retention depends on the association of the ribosome with the Sec61 complex, and complete lateral exit of the P2X2 TM segments was only induced by the artificial termination of translation. In the event of the premature release of P2X2 TM1 from the ER translocon, the truncated polypeptide fragment was to found aggregate in the ER membrane, suggesting a distinct physiological requirement for the delayed release of TM segments from the ER translocon site.},
+author = {Cross, Benedict C S and High, Stephen},
+doi = {10.1242/jcs.046094},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cross, High - 2009 - Dissecting the physiological role of selective transmembrane-segment retention at the ER translocon.pdf:pdf},
+issn = {0021-9533},
+journal = {Journal of cell science},
+month = {jun},
+number = {Pt 11},
+pages = {1768--77},
+pmid = {19417003},
+publisher = {The Company of Biologists Ltd},
+title = {{Dissecting the physiological role of selective transmembrane-segment retention at the ER translocon.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19417003},
+volume = {122},
+year = {2009}
+}
+@article{Sadlish2005,
+abstract = {Sequential triage of transmembrane segments by Sec61$\alpha$ during biogenesis of a native multispanning membrane protein},
+author = {Sadlish, Heather and Pitonzo, David and Johnson, Arthur E and Skach, William R},
+doi = {10.1038/nsmb994},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Sadlish et al. - 2005 - Sequential triage of transmembrane segments by Sec61$\alpha$ during biogenesis of a native multispanning membrane prot.pdf:pdf},
+issn = {1545-9993},
+journal = {Nature Structural {\&} Molecular Biology},
+month = {oct},
+number = {10},
+pages = {870--878},
+publisher = {Nature Publishing Group},
+title = {{Sequential triage of transmembrane segments by Sec61$\alpha$ during biogenesis of a native multispanning membrane protein}},
+url = {http://www.nature.com/articles/nsmb994},
+volume = {12},
+year = {2005}
+}
+@article{MacKinnon2014,
+abstract = {Membrane protein biogenesis requires the coordinated movement of hydrophobic transmembrane domains (TMD) from the cytosolic vestibule of the Sec61 channel into the lipid bilayer. Molecular insight into TMD integration has been hampered by the difficulty of characterizing intermediates during this intrinsically dynamic process. In this study, we show that cotransin, a substrate-selective Sec61 inhibitor, traps nascent TMDs in the cytosolic vestibule, permitting detailed interrogation of an early pre-integration intermediate. Site-specific crosslinking revealed the pre-integrated TMD docked to Sec61 near the cytosolic tip of the lateral gate. Escape from cotransin-arrest depends not only on cotransin concentration, but also on the biophysical properties of the TMD. Genetic selection of cotransin-resistant cancer cells uncovered multiple mutations clustered near the lumenal plug of Sec61$\alpha$, thus revealing cotransin's likely site of action. Our results suggest that TMD/lateral gate interactions facilitate TMD transfer into the membrane, a process that is allosterically modulated by cotransin binding to the plug. DOI: http://dx.doi.org/10.7554/eLife.01483.001.},
+author = {MacKinnon, Andrew L. and Paavilainen, Ville O. and Sharma, Ajay and Hegde, Ramanujan S. and Taunton, Jack},
+doi = {10.7554/eLife.01483},
+file = {:home/james/Downloads/elife-01483-v1.pdf:pdf},
+isbn = {2050-084X (Electronic)},
+issn = {2050084X},
+journal = {eLife},
+number = {3},
+pages = {1--23},
+pmid = {24497544},
+title = {{An allosteric Sec61 inhibitor traps nascent transmembrane helices at the lateral gate}},
+volume = {2014},
+year = {2014}
+}
+@article{Martoglio1995,
+abstract = {Lipids and proteins were found to contact a nascent type II membrane protein, as well as a nascent secretory protein, during their insertion into the membrane of the endoplasmic reticulum. This suggests that the protein-conducting channel is open laterally toward the lipid bilayer during an early stage of protein insertion. Contact to lipids was confined to the hydrophobic core region of the respective signal or signal anchor sequence. Thus, the nascent polypeptide is positioned in the translocation complex such that the signal or signal anchor sequence faces the lipid bilayer, whereas the hydrophilic, translocating portion is in proteinaceous environment.},
+author = {Martoglio, Bruno and Hofmann, Michael W and Brunner, Josef and Dobberstein, Bernhard},
+doi = {10.1016/0092-8674(95)90330-5},
+file = {::},
+issn = {0092-8674},
+journal = {Cell},
+month = {apr},
+number = {2},
+pages = {207--214},
+publisher = {Cell Press},
+title = {{The protein-conducting channel in the membrane of the endoplasmic reticulum is open laterally toward the lipid bilayer}},
+url = {https://www.sciencedirect.com/science/article/pii/0092867495903305},
+volume = {81},
+year = {1995}
+}
 @article{Tu2000,
 author = {Tu, L.W. and Wang, Jing and Helm, Andrew and Skach, W.R. and Deutsch, Carol},
 file = {:home/james/Downloads/tu2000.pdf:pdf},
@@ -8,6 +72,72 @@ title = {{Transmembrane biogenesis of Kv1. 3}},
 url = {http://pubs.acs.org/doi/abs/10.1021/bi991740r},
 volume = {39},
 year = {2000}
+}
+@article{Yap2009,
+abstract = {The recognition of a C-terminal motif in E. coli SecM (150FXXXXWIXXXXGIRAGP166) inside the ribosome tunnel causes translation arrest, but the mechanism of recognition is unknown. Whereas single mutations in this motif impair recognition, we demonstrate that new arrest-inducing peptides can be created through remodeling of the SecM C terminus. We found that R163 is indispensable but that flanking residues that vary in number and position play an important secondary role in translation arrest. The observation that individual SecM variants showed a distinct pattern of crosslinking to ribosomal proteins suggests that each peptide adopts a unique conformation inside the tunnel. Based on the results, we propose that translation arrest occurs when the peptide conformation specified by flanking residues moves R163 into a precise intratunnel location. Our data indicate that translation arrest results from extensive communication between SecM and the tunnel and help to explain the striking diversity of arrest-inducing peptides found throughout nature.},
+author = {Yap, Mee-Ngan and Bernstein, Harris D.},
+doi = {10.1016/J.MOLCEL.2009.04.002},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Yap, Bernstein - 2009 - The Plasticity of a Translation Arrest Motif Yields Insights into Nascent Polypeptide Recognition inside the Rib.pdf:pdf},
+issn = {1097-2765},
+journal = {Molecular Cell},
+month = {apr},
+number = {2},
+pages = {201--211},
+publisher = {Cell Press},
+title = {{The Plasticity of a Translation Arrest Motif Yields Insights into Nascent Polypeptide Recognition inside the Ribosome Tunnel}},
+url = {https://www.sciencedirect.com/science/article/pii/S1097276509002305},
+volume = {34},
+year = {2009}
+}
+@article{Ismail2012,
+abstract = {Most membrane proteins are co-translationally inserted into the membrane with the aid of Sec-type translocons. Using so-called translation-arrest peptides derived from bacterial and mammalian proteins as natural force sensors, a new study now demonstrates how force is exerted on a nascent chain at two distinct points in a transmembrane helix during its transit through the translocon channel into the membrane.},
+author = {Ismail, Nurzian and Hedman, Rickard and Schiller, Nina and von Heijne, Gunnar},
+doi = {10.1038/nsmb.2376},
+file = {::},
+issn = {1545-9993},
+journal = {Nature Structural {\&} Molecular Biology},
+keywords = {Membrane biophysics,Membrane proteins,Translation},
+month = {oct},
+number = {10},
+pages = {1018--1022},
+publisher = {Nature Publishing Group},
+title = {{A biphasic pulling force acts on transmembrane helices during translocon-mediated membrane integration}},
+url = {http://www.nature.com/articles/nsmb.2376},
+volume = {19},
+year = {2012}
+}
+@article{Butkus2003,
+abstract = {SecA is an ATPase and motor protein that drives protein translocation across the bacterial plasma membrane. In Escherichia coli SecA levels are regulated by the secretion needs of the cell utilizing secM, which encodes a secreted protein. Previous studies demonstrated that this regulation requires a translational pause within secM, whose duration regulates the accessibility of the secA Shine-Dalgarno sequence on secM secA mRNA. Here we provide evidence that translocon "pulling" of nascent SecM is what regulates the duration of the secM translational pause, and thus secA expression levels, thereby providing direct support for this model.},
+author = {Butkus, Martha E and Prundeanu, Lucia B and Oliver, Donald B},
+doi = {10.1128/JB.185.22.6719-6722.2003},
+file = {::},
+issn = {0021-9193},
+journal = {Journal of bacteriology},
+month = {nov},
+number = {22},
+pages = {6719--22},
+pmid = {14594848},
+publisher = {American Society for Microbiology},
+title = {{Translocon "pulling" of nascent SecM controls the duration of its translational pause and secretion-responsive secA regulation.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/14594848 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC262105},
+volume = {185},
+year = {2003}
+}
+@article{Ito2010,
+abstract = {Recent studies have identified several amino acid sequences that interact with the ribosomal interior components and arrest their own elongation. Whereas stalling of the inducible class depends on specific low-molecular weight compounds, that of the intrinsic class is released when the nascent chain is transported across or inserted into the membrane. The stalled ribosome alters messenger RNA secondary structure and thereby contributes to regulation of the cis-located target gene expression at different levels. The stalling sequences are divergent but likely to utilize non-uniform nature of the peptide bond formation reactions and are recruited relatively recently to different biological systems, possibly including those to be identified in forthcoming studies.},
+author = {Ito, Koreaki and Chiba, Shinobu and Pogliano, Kit},
+doi = {10.1016/J.BBRC.2010.01.073},
+file = {::},
+issn = {0006-291X},
+journal = {Biochemical and Biophysical Research Communications},
+month = {feb},
+number = {1},
+pages = {1--5},
+publisher = {Academic Press},
+title = {{Divergent stalling sequences sense and control cellular physiology}},
+url = {https://www.sciencedirect.com/science/article/pii/S0006291X10001221},
+volume = {393},
+year = {2010}
 }
 @article{Sato2003,
 abstract = {Voltage-dependent ion channels control changes in ion permeability in response to membrane potential changes. The voltage sensor in channel proteins consists of the highly positively charged segment, S4, and the negatively charged segments, S2 and S3. The process involved in the integration of the protein into the membrane remains to be elucidated. In this study, we used in vitro translation and translocation experiments to evaluate interactions between residues in the voltage sensor of a hyperpolarization-activated potassium channel, KAT1, and their effect on the final topology in the endoplasmic reticulum (ER) membrane. A D95V mutation in S2 showed less S3-S4 integration into the membrane, whereas a D105V mutation allowed S4 to be released into the ER lumen. These results indicate that Asp(95) assists in the membrane insertion of S3-S4 and that Asp(105) helps in preventing S4 from being releasing into the ER lumen. The charge reversal mutation, R171D, in S4 rescued the D105R mutation and prevented S4 release into the ER lumen. A series of constructs containing different C-terminal truncations of S4 showed that Arg(174) was required for correct integration of S3 and S4 into the membrane. Interactions between Asp(105) and Arg(171) and between negative residues in S2 or S3 and Arg(174) may be formed transiently during membrane integration. These data clarify the role of charged residues in S2, S3, and S4 and identify posttranslational electrostatic interactions between charged residues that are required to achieve the correct voltage sensor topology in the ER membrane.},
@@ -1671,27 +1801,11 @@ url = {http://dx.doi.org/10.1016/j.molcel.2013.07.013},
 volume = {51},
 year = {2013}
 }
-@article{Cymer2015a,
-abstract = {The biogenesis, folding, and structure of $\alpha$-helical membrane proteins (MPs) are important to understand because they underlie virtually all physiological processes in cells including key metabolic pathways, such as the respiratory chain and the photosystems, as well as the transport of solutes and signals across membranes. Nearly all MPs require translocons—often referred to as protein-conducting channels—for proper insertion into their target membrane. Remarkable progress toward understanding the structure and functioning of translocons has been made during the past decade. Here, we review and assess this progress critically. All available evidence indicates that MPs are equilibrium structures that achieve their final structural states by folding along thermodynamically controlled pathways. The main challenge for cells is the targeting and membrane insertion of highly hydrophobic amino acid sequences. Targeting and insertion are managed in cells principally by interactions between ribosomes and membrane-embedded translocons. Our review examines the biophysical and biological boundaries of MP insertion and the folding of polytopic MPs in vivo. A theme of the review is the under-appreciated role of basic thermodynamic principles in MP folding and assembly. Thermodynamics not only dictates the final folded structure but also is the driving force for the evolution of the ribosome–translocon system of assembly. We conclude the review with a perspective suggesting a new view of translocon-guided MP insertion.},
-author = {Cymer, Florian and von Heijne, Gunnar and White, Stephen H.},
-doi = {10.1016/J.JMB.2014.09.014},
-file = {::},
-issn = {0022-2836},
-journal = {Journal of Molecular Biology},
-month = {mar},
-number = {5},
-pages = {999--1022},
-publisher = {Academic Press},
-title = {{Mechanisms of Integral Membrane Protein Insertion and Folding}},
-url = {https://www.sciencedirect.com/science/article/pii/S0022283614005130},
-volume = {427},
-year = {2015}
-}
 @article{Egea,
 abstract = {The structure of the protein-translocating channel SecYE$\beta$ from Pyrococcus furiosus at 3.1-{\AA} resolution suggests a mechanism for chaperoning transmembrane regions of a protein substrate during its lateral delivery into the lipid bilayer. Cytoplasmic segments of SecY orient the C-terminal $\alpha$-helical region of another molecule, suggesting a general binding mode and a promiscuous guiding surface capable of accommodating diverse nascent chains at the exit of the ribosomal tunnel. To accommodate this putative nascent chain mimic, the cytoplasmic vestibule widens, and a lateral exit portal is opened throughout its entire length for partition of transmembrane helical segments to the lipid bilayer. In this primed channel, the central plug still occludes the pore while the lateral gate is opened, enabling topological arbitration during early protein insertion. In vivo, a 15 amino acid truncation of the cytoplasmic C-terminal helix of SecY fails to rescue a secY-deficient strain, supporting the essential role of this helix as suggested from the structure.},
 author = {Egea, P. F. and Stroud, R. M.},
 doi = {10.1073/pnas.1012556107},
-file = {::},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Egea, Stroud - 2010 - Lateral opening of a translocon upon entry of protein suggests the mechanism of insertion into membranes.pdf:pdf},
 isbn = {0027-8424},
 issn = {0027-8424},
 journal = {Proceedings of the National Academy of Sciences},
@@ -4353,25 +4467,6 @@ url = {https://doi.org/10.1016/j.jmb.2004.11.036 http://www.sciencedirect.com/sc
 volume = {346},
 year = {2005}
 }
-@article{Cymer2015,
-abstract = {The biogenesis, folding, and structure of $\alpha$-helical membrane proteins (MPs) are important to understand because they underlie virtually all physiological processes in cells including key metabolic pathways, such as the respiratory chain and the photosystems, as well as the transport of solutes and signals across membranes. Nearly all MPs require translocons - often referred to as protein-conducting channels - for proper insertion into their target membrane. Remarkable progress toward understanding the structure and functioning of translocons has been made during the past decade. Here, we review and assess this progress critically. All available evidence indicates that MPs are equilibrium structures that achieve their final structural states by folding along thermodynamically controlled pathways. The main challenge for cells is the targeting and membrane insertion of highly hydrophobic amino acid sequences. Targeting and insertion are managed in cells principally by interactions between ribosomes and membrane-embedded translocons. Our review examines the biophysical and biological boundaries of MP insertion and the folding of polytopic MPs in vivo. A theme of the review is the under-appreciated role of basic thermodynamic principles in MP folding and assembly. Thermodynamics not only dictates the final folded structure but also is the driving force for the evolution of the ribosome-translocon system of assembly. We conclude the review with a perspective suggesting a new view of translocon-guided MP insertion.},
-author = {Cymer, Florian and {Von Heijne}, Gunnar and White, Stephen},
-doi = {10.1016/j.jmb.2014.09.014},
-file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cymer, Von Heijne, White - 2015 - Mechanisms of integral membrane protein insertion and folding.pdf:pdf},
-isbn = {1089-8638 (Electronic)$\backslash$r0022-2836 (Linking)},
-issn = {10898638},
-journal = {Journal of Molecular Biology},
-keywords = {lipid-protein interactions,membrane protein biogenesis,membrane protein folding,transmembrane helix},
-mendeley-groups = {PhD manuscript},
-month = {sep},
-number = {5},
-pages = {999--1022},
-pmid = {25277655},
-title = {{Mechanisms of integral membrane protein insertion and folding}},
-url = {https://doi.org/10.1016/j.jmb.2014.09.014 http://linkinghub.elsevier.com/retrieve/pii/S0022283614005130},
-volume = {427},
-year = {2015}
-}
 @article{Kall2004,
 abstract = {An inherent problem in transmembrane protein topology prediction and signal peptide prediction is the high similarity between the hydrophobic regions of a transmembrane helix and that of a signal peptide, leading to cross-reaction between the two types of predictions. To improve predictions further, it is therefore important to make a predictor that aims to discriminate between the two classes. In addition, topology information can be gained when successfully predicting a signal peptide leading a transmembrane protein since it dictates that the N terminus of the mature protein must be on the non-cytoplasmic side of the membrane. Here, we present Phobius, a combined transmembrane protein topology and signal peptide predictor. The predictor is based on a hidden Markov model (HMM) that models the different sequence regions of a signal peptide and the different regions of a transmembrane protein in a series of interconnected states. Training was done on a newly assembled and curated dataset. Compared to TMHMM and SignalP, errors coming from cross-prediction between transmembrane segments and signal peptides were reduced substantially by Phobius. False classifications of signal peptides were reduced from 26.1{\%} to 3.9{\%} and false classifications of transmembrane helices were reduced from 19.0{\%} to 7.7{\%}. Phobius was applied to the proteomes of Homo sapiens and Escherichia coli. Here we also noted a drastic reduction of false classifications compared to TMHMM/SignalP, suggesting that Phobius is well suited for whole-genome annotation of signal peptides and transmembrane regions. The method is available at http://phobius.cgb.ki.se/ as well as at http://phobius.binf.ku.dk/ {\textcopyright} 2004 Elsevier Ltd. All rights reserved.},
 annote = {From Duplicate 1 (A combined transmembrane topology and signal peptide prediction method - K{\"{a}}ll, Lukas; Krogh, Anders; Sonnhammer, E. L L)
@@ -4584,16 +4679,6 @@ title = {{Are knowledge-based potentials derived from protein structure sets dis
 url = {https://doi.org/3.0.CO;2-I},
 volume = {31},
 year = {1998}
-}
-@article{Cymer2015,
-author = {Cymer, F and Heijne, G and White, S H},
-doi = {10.1016/j.jmb.2014.09.014},
-file = {::},
-journal = {J Mol Biol},
-title = {{Mechanisms of integral membrane protein insertion and folding}},
-url = {https://doi.org/10.1016/j.jmb.2014.09.014},
-volume = {427},
-year = {2015}
 }
 @article{Heijne1986,
 author = {Heijne, G},
@@ -9581,8 +9666,11 @@ year = {2007}
 }
 @article{Cymer2014,
 abstract = {The biogenesis, folding, and structure of $\alpha$-helical membrane proteins (MPs) are important to understand because they underlie virtually all physiological processes in cells including key metabolic pathways, such as the respiratory chain and the photosystems, as well as the transport of solutes and signals across membranes. Nearly all MPs require translocons - often referred to as protein-conducting channels - for proper insertion into their target membrane. Remarkable progress toward understanding the structure and functioning of translocons has been made during the past decade. Here, we review and assess this progress critically. All available evidence indicates that MPs are equilibrium structures that achieve their final structural states by folding along thermodynamically controlled pathways. The main challenge for cells is the targeting and membrane insertion of highly hydrophobic amino acid sequences. Targeting and insertion are managed in cells principally by interactions between ribosomes and membrane-embedded translocons. Our review examines the biophysical and biological boundaries of MP insertion and the folding of polytopic MPs in vivo. A theme of the review is the under-appreciated role of basic thermodynamic principles in MP folding and assembly. Thermodynamics not only dictates the final folded structure but also is the driving force for the evolution of the ribosome-translocon system of assembly. We conclude the review with a perspective suggesting a new view of translocon-guided MP insertion.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
 author = {Cymer, Florian and {Von Heijne}, Gunnar and White, Stephen H.},
 doi = {10.1016/j.jmb.2014.09.014},
+eprint = {NIHMS150003},
 file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cymer, Von Heijne, White - 2015 - Mechanisms of integral membrane protein insertion and folding.pdf:pdf},
 isbn = {1089-8638 (Electronic)$\backslash$r0022-2836 (Linking)},
 issn = {10898638},
