added refs for membrane potential and biological factors.

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -587,8 +587,18 @@ The C-terminal tail charge is particularly important for determining subcellular
 Here we see that while hydrophobicity is statistically different between the subcellular membranes, there is overlap.
 Whilst there are differences in total average charge at the C-terminal flank, this is not an absolute rule.
 
-Average biochemical features are evidently of significance, however, here we see that the tandem in positively and negatively charged residues and the localisation of signals and features along the \gls{tmh} and flanks may be another nuance of the system and go some way to explaining how signals are maintained in local environments even when the average values are ambiguous.
+Average biochemical features are evidently of significance, however, here we see that the tandem in positively and negatively charged residues and the localisation of signals and features along the \gls{tmh} and flanks may be another nuance of the system which go some way to explaining how signals are maintained in local environments even when the average values are ambiguous.
 We also identify that alanine is a key reason behind the hydrophobic difference between subcellular organelles, with alanine being highly tolerated, if not favoured over other hydrophobic residues like leucine, in mitochondrial \gls{ta} proteins compared to \gls{er}, the Golgi, and the \gls{pm}.
+This could be an adaptation to the mitochondrial membrane, which contains a higher level of sphingolipids than other membranes.  %citation needed!
+There should also be a consideration of membrane potential.
+Although membrane potentials are in flux, typically, the \gls{pm} has a potential of ~70mV with the negativity being on the cytoplasmic side.
+It has been shown that the \gls{er} is again between 75-95mV with negativity on the lumenal side \cite{Quin2011, Worley 1994}.
+There is no detectable potential across the Golgi \cite{Schapiro2000}, and the mitochondrial inner membrane has a potential of 150-180 with negativity on the matrix side \cite{Seth2011}.
+However, whilst those numbers go some way to satisfy the flanking charge differences we see, they do not apply to the mitochondrial outer membrane in which the \gls{ta} proteins are localised.
+Porins on the mitochondrial outer membrane effectively diminish the membrane potential across the membrane.
+
+Nevertheless, it is tempting to conclude that these biochemical differences between localised \gls{ta} proteins is an adaptation to the membrane composition and environment.
+But this must be tempered by noting that the spontaneously inserting cytochrome b5 localises to the mitochondrial membrane in the absence of cytosol, and to the \gls{er} in the presence of cytosol \cite{Costa2018}; there are also biological factors determining localisation.
 
 \subsection{More annotation is required to identify chaperone\--specific factors.}
 
